Styles show page's middle column, refactors some css with variables, and corrects some code on show page that produced errors. 1. _cards.scss: adds flex styling to all middle columns. 2. _show_button.scss: refactors the values into common variables. 3. _metadata_block.html.erb: wraps dts and dds into a line div to aid styling. 4. _this_item_contains_block.html.erb: corrects the code in this partial so that    all tests pass.

--- a/app/assets/stylesheets/lux/_cards.scss
+++ b/app/assets/stylesheets/lux/_cards.scss
@@ -11,3 +11,20 @@ div.card-header {
 div.card-header:first-child {
   border-radius: 0;
 }
+
+div.about-this-item, div.about-this-collection, div.subjects-keywords, div.publication-details, div.additional-details {
+  > div.card-body > dl > div.card-line {
+    display: flex;
+    flex-wrap: wrap;
+
+    > dt {
+      width: 33%;
+    }
+
+    > dd {
+      margin-left: auto;
+      width: 66%;
+    }
+  }
+}
+
